--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.18",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7"
   },
