faet #3 Detail 페이지

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
   "ignorePatterns": ["vite.config.js"],
   "rules": {
     "comma-dangle": 0,
-    "prettier/prettier": ["error"],
+    "prettier/prettier": 0,
     "react/require-default-props": 0,
     "import/no-unresolved": 0,
     "no-unused-vars": 1,
