--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
