--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
     "@phosphor-icons/react": "^2.0.10",
+    "@storybook/addon-knobs": "^7.0.2",
     "axios": "^1.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.21",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
